# deferror

./: Cargo.toml  build.proj
src/: define_error.rs  error.rs  lib.rs  register_errors.rs
