[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "A library for easily defining an error type."
keywords = [
    "err",
    "errs",
    "error",
    "errors",
    "result"
]
exclude = [
    ".gitignore",
    "build.proj"
]
license = "MIT"
name = "deferror"
repository = "https://github.com/Tyleo/deferror"
version = "1.0.0"
